3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------
Changes for SVN:

Don't delete (partial) map from memory in case of save error, warn DMs.
 include/libproto.h map.h sproto.h
 common/loader.l map.c
 server/c_wiz.c login.c swap.c
Nicolas Weeger 2007-08-11

Add new NDI_ALL_DMS to send a message to all connected DMs. Used in case of errors.
 include/newclient.h
 socket/info.c
Nicolas Weeger 2007-08-11

server/player.c: fix find_better_arrow() comment, allow parameter to be NULL.
Nicolas Weeger 2007-08-11

doc/Developers/map.dox: add some real content.
Nicolas Weeger 2007-08-09

doc/playbook-html/Makefile.am,doc/spoiler-html/Makefile.am:  Update the
  clean directive to remove the png files, since that is what is now
  used, and not gif files.
MSW 2007-08-08

Server support for Metaserver2:
acinclude.m4: Add LIBCURL_CHECK_CONFIG macro, used by configure.
configure.ac: Add check for pthread, LIBCURL.  Extra
  logic to display if we will build with metaserver2 support
lib/Makefile.am: add metaserver2 to list of files to install.
lib/metaserver2: Settings file for metaserver2 support.
server/init.c: Add call to metaserver2_init() during startup.
include/metaserver2.h: Header file include metaserver2 related data.
include/autoconf.h.in: Rebuilt
include/sockproto.h: Rebuilt with new metaserver2 functions.
socket/metaserver.c: metaserver2 update logic added.
MSW 2007-08-08

Remove useless parameter.
 include/sproto.h
 server/pets.c server.c swap.c
Nicolas Weeger 2007-08-06

Rename remove_door2() to remove_locked_door().
 include/sproto.h
 server/player.c time.c
 types/legacy/process.c
Nicolas Weeger 2007-08-06

Documentation, no functional change.
 doc/Developers/login.dox: new file.