@@ -190,6 +190,8 @@ int swap_map(mapstruct *map) {
         /* This is sufficiently critical to mandate to warn all DMs. */
         draw_ext_info_format(NDI_ALL_DMS | NDI_UNIQUE | NDI_RED, -1, NULL, MSG_TYPE_ADMIN, MSG_TYPE_ADMIN_LOADSAVE,
             "Failed to swap map %s!", NULL, map->path);
+        /* Map is *not* swapped. */
+        map->in_memory = MAP_IN_MEMORY;
         return res;
     }
 
